Fix overflow issues on all pages

--- a/frontend/routes/DashBoard/DashBoard.css
+++ b/frontend/routes/DashBoard/DashBoard.css
@@ -1,5 +1,9 @@
 .root {
   font-family: 'Arial', Serif;
+  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
@@ -88,10 +92,10 @@
   cursor: pointer;
 }
 
-#main {
-  padding: 20px;
-  overflow: hidden;
-  width: 100%;
+.main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 @media (max-width: 568px) {
